# sillabuz

./: .gitignore  README  pyproject.toml  requirements.txt
portafolios/: asgi.py  settings.py  urls.py  wsgi.py
portafolios/blog/: admin.py  apps.py  models.py
portafolios/blog/migrations/: 0001_initial.py
portafolios/frontend/templates/storefront/: base.html
portafolios/frontend/templates/storefront/blog/: detail.html  list.html
portafolios/frontend/urls/: __init__.py  storefront.py
portafolios/frontend/views/: blog.py
