[tool.poetry]
name = "silabus-portafolio"
version = "0.1.0"
description = ""
authors = ["Andres Armas <andresarmas97@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
